@@ -13,6 +13,7 @@ Improvements:
     * check existence of group at compile time also.
     * reduce number of call to stat during edje_object_file_set.
     * unswallow object about to be swallowed if necessary.
+    * Lua scripts now more resilient against API changes.
 
 Changes since Edje 1.0.0:
 -------------------------
